<resources>
    <string name="act_done">Done</string>
    <string name="act_yes">Yes</string>
    <string name="act_add">Add</string>
    <string name="act_no">No</string>
    <string name="act_cancel">Cancel</string>
    <string name="act_delete">Delete</string>
    <string name="act_remove">Remove</string>
    <string name="act_rename">Rename</string>
    <string name="act_ok">OK</string>
    <string name="lbl_color">Color</string>
    <string name="lbl_brightness">Brightness</string>
    <string name="lbl_size">Size</string>
    <string name="lbl_default">Default</string>
    <string name="lbl_image">Image</string>
    <string name="lbl_customize">Customize</string>
    <string name="msg_unknown_error">Some unexpected error occurred</string>
    <string-array name="tracker_names">
        <item>Hotspot (Wifi)</item>
        <item>GPRS (Mobile Data)</item>
        <item>Data Sync</item>
        <item>Wifi</item>
        <item>Flash Light</item>
        <item>GPS</item>
        <item>Bluetooth</item>
        <item>Brightness</item>
        <item>Airplane Mode</item>
        <item>Screen Auto Rotate</item>
        <item>Volume Toggle</item>
        <item>Data Network Toggle</item>
        <item>USB Tether</item>
        <item>Screen Always On (WakeLock)</item>
        <item>WiMax (4G)</item>
        <item>Battery Info</item>
        <item>Screen Timeout</item>
        <item>Auto Brightness</item>
        <item>Play/Pause Music</item>
        <item>Next Track</item>
        <item>Previous Track</item>
        <item>Music volume</item>
        <item>Bluetooth Discovery</item>
        <item>Brightness Slider</item>
        <item>NFC</item>
        <item>Screen Lock</item>
        <item>Bluetooth Tether</item>
        <item>Volume Slider</item>
        <item>Sync Now</item>
        <item>Shutdown</item>
        <item>Restart</item>
        <item>Screen Light</item>
        <item>Notification Widget</item>
        <item>Widget Settings</item>
        <item>Second Notification Row</item>
        <item>Shutdown Menu</item>
        <item>Increase System Font</item>
        <item>Decrease System Font</item>
        <item>Rotation Lock</item>
        <item>adbWireless</item>
        <item>Pulse notification light</item>
        <item>Receive internet calls (SIP)</item>
        <item>Internet calling (SIP)</item>
        <item>Home Shortcut</item>
        <item>Recent Apps</item>
        <item>No Lock Screen</item>
        <item>Wifi Optimize</item>
        <item>Immersive mode</item>
    </string-array>
    <string-array name="tracker_category">
        <item>Mobile Data</item>
        <item>Network</item>
        <item>Multimedia</item>
        <item>Display</item>
        <item>Hardware</item>
        <item>App Commands</item>
        <item>Root</item>
        <item>Others</item>
    </string-array>
    <string-array name="tracker_names_short">
        <item>Hotspot (Wifi)</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item>Play/Pause</item>
        <item>Next</item>
        <item>Previous</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item>Lock</item>
        <item></item>
        <item>Volume</item>
        <item>Sync Now</item>
        <item>Shutdown</item>
        <item>Restart</item>
        <item>ScreenLight</item>
        <item></item>
        <item>Settings</item>
        <item></item>
        <item>Shutdown</item>
        <item>A &#11014;</item>
        <item>A &#11015;</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item>Home</item>
        <item>Recent Apps</item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="tracker_states">
        <item>off</item>
        <item>busy</item>
        <item>on</item>
        <item>low</item>
        <item>auto</item>
        <item>mid</item>
        <item>high</item>
        <item>portrait</item>
        <item>landscape</item>
        <item>auto</item>
        <item>mute</item>
        <item>vib</item>
        <item>ring</item>
        <item>ring-vib</item>
        <item>ask</item>
        <item>auto</item>
        <item>all</item>
    </string-array>
    <string name="err_no_activity">Application not found</string>
    <string name="err_security">Permission Denied</string>
    <string name="msg_account_synced">All accounts synced</string>
    <string name="msg_e_account_synced">Enabled accounts synced</string>
    <string name="admin_explain">Allow the widget with admin permissions to enable screen lock at first run.</string>
    <string name="admin_label">Power Toggles Screen Lock</string>
    <string name="admin_desc">Required for lock screen button</string>
    <string name="stat_help">Help</string>
    <string name="stat_help_desc">Search through frequently asked questions</string>
    <string name="stat_battery">Battery Polling</string>
    <string name="stat_admin">Device Admin</string>
    <string name="stat_admin_msg_on">Turn off to uninstall the app</string>
    <string name="stat_admin_msg_off">Required for Screen Lock toggle</string>
    <string name="stat_trackers_summary">Toggles may remain cached for some time after you delete the widget. Reset cache to remove such toggles and reset any stuck toggle.</string>
    <string name="stat_trackers_action">Reset Cache</string>
    <string name="stat_root">Root Access</string>
    <string name="stat_u_never">Never</string>
    <string name="stat_u_now">Just now</string>
    <string name="stat_u_mins">%d mins ago</string>
    <string name="stat_u_hours">%d hours ago</string>
    <string name="stat_u_days">%d days ago</string>
    <string name="stat_info">Info</string>
    <string name="stat_active_toggle">Active toggles</string>
    <string name="stat_active_toggle_none">No active toggles</string>
    <string name="stat_active_toggle_n">%d active toggles</string>
    <string name="stat_last_used">Last used: %s</string>
    <string name="wc_add_toggle">Add Toggle</string>
    <string name="wc_add_toggle_max_err">You can only add a maximum of 8 items to the widget.</string>
    <string name="wc_change_icon">Change Icon</string>
    <string name="wc_button_colors">Button Colors</string>
    <string name="wc_colors_default">Default color</string>
    <string name="wc_colors_working">Busy/unknown color</string>
    <string name="wc_colors_active">Active color</string>
    <string name="wc_style">Style</string>
    <string name="wc_full_height">Full height</string>
    <string name="wc_huge_icons">Huge icons</string>
    <string name="wc_style_indicator">Indicator</string>
    <string name="wc_ind_same_color">Use same as button colors</string>
    <string name="wc_style_labels">Labels</string>
    <string name="wc_label_color">Label color</string>
    <string name="wc_back">Background</string>
    <string name="wc_adjust_position">Adjust position</string>
    <string name="wc_transparency">Transparency</string>
    <string name="wc_tint">Tint</string>
    <string name="wc_dividers">Dividers</string>
    <string name="wc_hidden">Hidden</string>
    <string name="wc_click_feed">Click Feedback</string>
    <string-array name="wc_click_colors">
        <item>Kitkat gray</item>
        <item>Holo blue</item>
        <item>Transparent</item>
    </string-array>
    <string-array name="wc_click_colors_l">
        <item>Ripple</item>
        <item>Kitkat gray</item>
        <item>Holo blue</item>
        <item>Transparent</item>
    </string-array>
    <string name="wc_round_corners">Rounded corners</string>
    <string-array name="wc_import_msg">
        <item>Restoring\u2026</item>
        <item>Restore failed</item>
    </string-array>
    <string-array name="wc_export_msg">
        <item>Creating backup\u2026</item>
        <item>Backup saved in %s</item>
        <item>Failed to create backup</item>
    </string-array>
    <string name="wc_ex_theme">Export theme</string>
    <string name="wc_ex_theme_failed">Theme export failed</string>
    <string name="wc_ex_theme_success">Theme exported</string>
    <string name="wc_ex_theme_image">Theme must have an image background</string>
    <string name="cb_alpha">Alpha</string>
    <string name="cb_hex_hint">Hex Code</string>
    <string name="cb_argb">ARGB:</string>
    <string name="cb_set_color">Set Color</string>
    <string name="tp_loading">Loading List</string>
    <string name="tp_toggles">Toggles</string>
    <string name="tp_apps">Applications</string>
    <string name="tp_apps_short">Apps</string>
    <string name="tp_custom">Custom</string>
    <string name="tp_plugin">Plugins</string>
    <string name="tp_tasker">Tasker toggle</string>
    <string name="tp_shrts">Shortcuts</string>
    <string name="tp_search_hint">Search toggles</string>
    <string name="tp_tasker_disabled_title">External access disabled</string>
    <string name="tp_tasker_disabled">You need to enable external access in Tasker preferences before you can add tasker toggles</string>
    <string name="tp_tasker_empty">No task found</string>
    <string name="ip_title">Pick Icon</string>
    <string name="ip_theme_icons">Theme icons</string>
    <string name="ip_app_icons">Application icons</string>
    <string name="ip_counter">Counter icon</string>
    <string name="ip_image_pick">Pick image</string>
    <string name="ip_image_crop">Pick image and crop</string>
    <string name="ip_icon_pack">Icon Packs</string>
    <string name="ip_loading_img">Loading image</string>
    <string name="ip_loading_img_failed">Unable to load image</string>
    <string name="ite_info">Icon Map</string>
    <string name="ite_custom">Custom</string>
    <string name="ite_import">Import Image strip</string>
    <string-array name="ite_import_msg">
        <item>Importing Image strip</item>
        <item>Error importing image</item>
    </string-array>
    <string name="ite_export">Export Image strip</string>
    <string-array name="ite_export_msg">
        <item>Exporting Icon Strip</item>
        <item>Image saved in %s</item>
        <item>Failed to save icon strip</item>
    </string-array>
    <string name="bid_preview">Preview</string>
    <string name="bid_background">Change background</string>
    <string name="bid_digit_position">Digit display position</string>
    <string name="cg_click_toggle_1">Click a toggle</string>
    <string name="cg_click_toggle_2">to customize, move or remove it</string>
    <string name="cg_click_add_1">Click here</string>
    <string name="cg_click_add_2">to add more toggles</string>
    <string name="cg_customize_1">Customize the widget</string>
    <string name="cg_customize_2">using various theming options</string>
    <string name="tm_title">Themes</string>
    <string name="ts_battery_low">Low battery</string>
    <string name="ts_battery_moderate">Moderate battery</string>
    <string name="ts_battery_high">High battery</string>
    <string name="ps_set_state">Set state to</string>
    <string name="ps_toggle_to_update">Toggle to update</string>
    <string name="ps_set_count">Set count (Optional)</string>
    <string name="lbl_widgets">Widgets</string>
    <string name="lbl_homescreen">Homescreen</string>
    <string name="lbl_notification">Notification</string>
    <string name="lbl_folders">Folders</string>
    <string name="lbl_options">Options</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_stats">Stats and Info</string>
    <string name="lbl_review">Market review</string>
    <string name="folder_name">Unnamed Folder</string>
</resources>