<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.painless.pc.view.NinePatchView
                android:id="@+id/folder_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/folder_back" >

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:duplicateParentState="true" >

                    <include layout="@layout/folder_item" />
                </FrameLayout>
            </com.painless.pc.view.NinePatchView>

            <EditText
                android:id="@+id/edt_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toStartOf="@+id/folder_preview"
                android:ems="10"
                android:hint="@string/folder_name"
                android:inputType="textPersonName|textCapWords" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/btn_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/edt_input"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_config_add"
                android:drawableLeft="@drawable/icon_theme"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="3dp"
                android:text="@string/tm_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wc_button_colors" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" >

            <com.painless.pc.view.ColorButton
                android:id="@+id/btn_1"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_image_btn"
                android:contentDescription="@string/wc_colors_default" />

            <com.painless.pc.view.ColorButton
                android:id="@+id/btn_2"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_image_btn"
                android:contentDescription="@string/wc_colors_working" />

            <com.painless.pc.view.ColorButton
                android:id="@+id/btn_3"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_image_btn"
                android:contentDescription="@string/wc_colors_active" />
        </LinearLayout>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wc_style_labels" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" >

            <CheckBox
                android:id="@+id/chk_hide_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:checked="true"
                android:gravity="center_vertical"
                android:text="@string/wc_hidden" />

            <com.painless.pc.view.ColorButton
                android:id="@+id/cfg_lbl_color"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:background="@drawable/bg_image_btn"
                android:contentDescription="@string/wc_label_color" />
        </LinearLayout>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wc_back" />

        <RadioButton
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_default" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/btn_5"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_image" />

            <TextView
                android:id="@+id/cfg_back_stretch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_config_bbar"
                android:paddingBottom="8dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="8dp"
                android:text="@string/wc_adjust_position"
                android:textColor="@android:color/white"
                android:visibility="invisible" />
        </FrameLayout>
    </LinearLayout>

</ScrollView>