<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp" >

    <com.painless.pc.view.ColorButton
        android:id="@+id/btn_1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/bg_image_btn"
        android:contentDescription="@string/ts_battery_low" />

    <com.painless.pc.view.ColorButton
        android:id="@+id/btn_2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/bg_image_btn"
        android:contentDescription="@string/ts_battery_moderate" />

    <com.painless.pc.view.ColorButton
        android:id="@+id/btn_3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/bg_image_btn"
        android:contentDescription="@string/ts_battery_high" />

</LinearLayout>