<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/config_popup_top" >

        <ImageView
            android:id="@+id/cp_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:src="@drawable/config_popup_arrow" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/config_popup"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/mnu_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/act_rename"
            android:focusable="false"
            android:padding="8dp"
            android:src="@drawable/icon_pencil" />

        <ImageView
            android:id="@+id/mnu_change_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/wc_change_icon"
            android:focusable="false"
            android:padding="8dp"
            android:src="@drawable/icon_config_picture" />

        <ImageView
            android:id="@+id/mnu_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/act_remove"
            android:focusable="false"
            android:padding="8dp"
            android:src="@drawable/icon_config_delete" />
    </LinearLayout>

</LinearLayout>